# bbwatch

./: .gitignore  .mcp.json  INSTALL.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: bb-download.md  bb-scan.md  bb-setup.md  bb-tasks.md
docs/superpowers/plans/: 2026-06-28-bbwatch-m1-foundation.md  2026-06-28-bbwatch-m2-monitoring.md  2026-06-28-bbwatch-m3-completion.md
docs/superpowers/specs/: 2026-06-28-bbwatch-design.md  2026-06-28-bbwatch-detailed-design.md
hooks/: hooks.json
scripts/: bootstrap.sh  session_start.py
skills/bb-assistant/: SKILL.md
src/bbwatch/: auth.py  bbclient.py  cli.py  config.py  dedup.py  diff.py  downloader.py  errors.py  extract.py  logging_setup.py  mcp_server.py  models.py  notifier.py  ops.py  scanner.py  secrets.py  session.py  summary.py  transport.py
src/bbwatch/dashboard/: __init__.py  index.html  server.py
src/bbwatch/store/: __init__.py  schema.sql  store.py
tests/: test_auth.py  test_bbclient.py  test_bbclient_m2.py  test_cli.py  test_cli_download.py  test_cli_scan.py  test_config.py  test_contents.py  test_dashboard.py  test_dedup.py  test_diff.py  test_downloader.py  test_extras.py  test_logging_redaction.py  test_mcp.py  test_models.py  test_notifier.py  test_ops.py  test_plugin.py  test_scanner.py  test_secrets.py  test_session.py  test_setup.py  test_smoke.py  test_store.py  test_summary.py  test_task_done.py  test_transport.py
tests/fixtures/: adfs_form.html  announcements_p1.json  columns_p1.json  courses_p1.json  courses_p2.json  users_me.json
